--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
       #options: --cpus 1    
     steps:
       - name: Check out this repo
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
       #- name: Run the scraping script
       #  run: python action.py
