--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       #  - 80
       #volumes:
       #  - my_docker_volume:/volume_mount
-      #options: --cpus 1    
+      options: --user root
     steps:
       - name: Check out this repo
         uses: actions/checkout@v4
