--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       #  - my_docker_volume:/volume_mount
       options: --user root
     steps:
-      - name: Check out this repo
+      - name: Repo checkout
         uses: actions/checkout@v4
-      #- name: Run the scraping script
-      #  run: python action.py
+      - name: Run script
+        run: python test.py
