--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Selenium in Pythong # TODO just create an image with this added
         run: wget https://bootstrap.pypa.io/get-pip.py && python3 get-pip.py && python3 -m pip install selenium
+      - name: Test Chrome
+        run: chrome --headless
       - name: Run script
         run: python3 test.py
