--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,30 +4,25 @@ on:
 jobs:
   run_pythong_action:
     runs-on: ubuntu-latest
-
-    services:
-      selenium:
-        image: selenium/standalone-chrome:latest
-        ports: 
-          - 4444:4444
-        options: --shm-size="2g"
-
+    container: # TODO: download this docker inside the runner docker instead and cache it
+      image: selenium/standalone-chrome
+      env:
+        SE_OFFLINE: false
+      #ports:
+      #  - 80
+      #volumes:
+      #  - my_docker_volume:/volume_mount
+      options: --user root
     steps:
-    - uses: actions/checkout@v2
-    - name: Get IP Address
-      run: echo "##[set-output name=ip;]$(ifconfig eth0 | grep 'inet [0-9\.]* ' -o | sed 's/[^0-9\.]//g')"
-      id: ip_addr 
-      
-    - name: Setup Pyhon
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-        
-    - name: Install Python dependencies
-      run: wget https://bootstrap.pypa.io/get-pip.py && python3 get-pip.py && python3 -m pip install selenium
-
-    - name: Test Chrome
-      run: chrome --headless
-
-    - name: Run Tests
-      run: python3 test.py --backend http://localhost:8080/ --frontend http://${{ steps.ip_addr.outputs.ip }}:4200 --selenium http://localhost:4444/wd/hub
+      #- name: Cache Docker images.
+      #  uses: ScribeMD/docker-cache@0.3.7
+      #  with:
+      #    key: docker-${{ runner.os }}
+      - name: Repo checkout
+        uses: actions/checkout@v4
+      - name: Install Selenium in Pythong # TODO just create an image with this added
+        run: wget https://bootstrap.pypa.io/get-pip.py && python3 get-pip.py && python3 -m pip install selenium
+      - name: Test Chrome
+        run: which chrome || which chromium || which google-chrome-stable || chrome --headless
+      - name: Run script
+        run: python3 test.py
