--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: run pythong action
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 6,14,22 * * *'
+    - cron: '0 * * * *'
 jobs:
   run_pythong_action:
     runs-on: ubuntu-latest
